--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "element-ui": "^1.4.6",
+    "normalize.css": "^7.0.0",
     "nprogress": "^0.2.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
