--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nprogress": "^0.2.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
-    "vuex": "^3.0.0"
+    "vuex": "^3.0.0",
+    "vuex-persist": "^0.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
